# NavigationMCP

./: .gitignore  MCP_HTTP_服务配置说明.md  README.txt  build.gradle  gradle.properties  settings.gradle  导航MCP工具开发计划.md
.claude/: settings.local.json
app/: build.gradle  flavor_list.txt  proguard-rules.pro
app/libs/: mcpservice-manager-0.7.1-alpha.aar
app/libs/temp_aar/: AndroidManifest.xml  proguard.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: traffic.json
app/src/main/res/drawable/: bg_base_mfc_cadillac_bg_pressed.xml  bg_base_mfc_cadillac_bg_selected.xml  bg_button_map_limit.xml  bg_car_connect_function.xml  bg_car_logo_select.xml  bg_car_logo_selector.xml  bg_custom_thumb.xml  bg_dialog_negative.xml  bg_end_point.xml  (+236 more)
app/src/main/res/drawable-night/: bg_base_mfc_cadillac_bg_pressed.xml  icon_sr_58.xml  img_basic_close.xml  img_basic_ic_search.xml  img_data_sync.xml  img_find_car.xml  img_no_sense_connnect.xml  img_parking_space_58.xml  img_remote_navi.xml  img_route_add_point_sw1225.xml  img_route_refresh_sw1225.xml  img_wechat_unbind.xml  phone_dialog_icon.xml  setting_check_dialog_cancel_bg.xml
burypoint/: build.gradle
engine/adas/: adas-sdk-1.5.1.aar  adas.aar  build.gradle
engine/bls/activate/: build.gradle
engine/encryptvin/: EncryptVinSdk_557_v3.0.2.aar  build.gradle
engine/fsa/: build.gradle
engine/oas/: OAS-20240530-v1-record-release.aar  OAS-20250408-v1-record-release.aar  build.gradle
engine/vrbridge/: bridgesdk.aar  build.gradle
engine/vrbridgeprotocol/: bridgesdk_protocol.aar  build.gradle
engine/vtserver/: build.gradle  vtserver-release.aar
fsa/: build.gradle
fsa/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mapservice/: build.gradle
mapservice/src/main/: AndroidManifest.xml
mcp-coordinator/: build.gradle  consumer-rules.pro
mcp-coordinator/src/main/: AndroidManifest.xml
patacnetlib/: build.gradle
scene/: build.gradle
service/: build.gradle  图层流程-README.txt
service/src/main/: AndroidManifest.xml
service/src/main/assets/: refer_style.json
ui/: build.gradle
utils/: build.gradle  proguard-rules.pro
utils/src/main/: AndroidManifest.xml
vrbridge/: build.gradle
vtserver/: build.gradle
vtserver/checkstyle/: checkstyle.xml
vtserver/src/main/cpp/: CMakeLists.txt  com_iauto_vtserver_jni.cpp
vtserver/src/main/cpp/include/: vt_description.h  vt_source.h  vtlog.h  vtservice.h  vtsource_factory.h
vtserver/src/main/cpp/src/: vt_description.cpp  vt_source.cpp  vtlog.cpp  vtservice.cpp  vtsource_factory.cpp
vtserver/test/: CMakeLists.txt  Environment.cpp  Environment.h  VTServer.h  VTSourceDescription.h  VTTypes.h  gtestmain.cpp  test_vtservice.cpp  test_vtsource.cpp
vtserver/test/mock/: mock_VTServer.h  mock_VTSource.h  mock_VTSourceCallback.h  mock_VTSourceFactory.h
(+6326 files in other folders)
